--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -14,7 +14,6 @@
     z-index: 2;
   }
 
-  /*Седьмое задание начало*/
   .site-list::after {
     content: "";
     position: absolute;
@@ -32,8 +31,7 @@
 @media (min-width: @tablet-width) {
   .site-list {
     display: block;
-    display: flex;
-    /* stylelint-disable-line */
+    display: flex; /* stylelint-disable-line */
     justify-content: space-between;
     background-color: @white;
     color: @black;
