--- a/source/less/blocks/about-catalog.less
+++ b/source/less/blocks/about-catalog.less
@@ -22,7 +22,7 @@
   .about-catalog::after {
     position: absolute;
     right: 0;
-    top: 0px;
+    top: 0;
     content: url("../img/triangle-mobile.svg");
     padding: 0;
     margin-top: -56px;
