--- a/source/less/blocks/about-form.less
+++ b/source/less/blocks/about-form.less
@@ -1,6 +1,6 @@
 .about-form {
   box-sizing: border-box;
-  padding: 36px 20px 28px 20px;
+  padding: 35px 19px 28px 20px;
 }
 
 @media (max-width: @mobile-width-only) {
@@ -15,7 +15,7 @@
     top: 0;
     content: url("../img/triangle-mobile.svg");
     padding: 0;
-    margin-top: -57px;
+    margin-top: -56px;
     width: 321px;
   }
 }
@@ -25,7 +25,7 @@
   .about-form {
     width: 768px;
     box-sizing: border-box;
-    padding: 64px 166px 102px 166px;
+    padding: 64px 166px 98px 166px;
   }
 }
 
@@ -33,18 +33,20 @@
   .about-form {
     width: 1200px;
     box-sizing: border-box;
-    padding: 115px 383px 67px 383px;
+    padding: 113px 380px 60px 380px;
   }
 }
 
 .about-form__title {
   .text-block__title();
+  margin-bottom: 24px;
 }
 
 @media (min-width: @tablet-width) {
   .about-form__title {
     .text-block__title ();
     font-size: 30px;
+    margin-bottom: 20px;
   }
 }
 
@@ -52,6 +54,7 @@
   .about-form__title {
     .text-block__title ();
     font-size: 30px;
+    margin-bottom: 30px;
   }
 }
 
