--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -1,6 +1,6 @@
 .modal {
   position: relative;
-  -webkit-box-sizing: border-box; /* stylelint-disable-line */
+  -webkit-box-sizing: border-box;   /* stylelint-disable-line */
   box-sizing: border-box;
   margin: auto;
   background-color: @white;
@@ -23,6 +23,25 @@
   }
 }
 
+.modal-content--error {
+  padding: 45px 42px 35px 42px;
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: @tablet-width) {
+  .modal-content--error {
+    padding: 49px 47px 49px 46px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .modal-content--error {
+    padding: 44px 47px 47px 46px;
+  }
+}
+
+
 .modal--success {
   width: 320px;
 }
@@ -41,13 +60,32 @@
   }
 }
 
+.modal-content--success {
+  padding: 0;
+  padding-top: 40px;
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: @tablet-width) {
+  .modal-content--success {
+    padding-top: 52px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .modal-content--success {
+    padding-top: 52px;
+  }
+}
+
 .modal__container {
   position: fixed;
   top: 0;
   left: 0;
-  display: -webkit-box; /* stylelint-disable-line */
-  display: -ms-flexbox; /* stylelint-disable-line */
-  display: flex; /* stylelint-disable-line */
+  display: -webkit-box;   /* stylelint-disable-line */
+  display: -ms-flexbox;   /* stylelint-disable-line */
+  display: flex;   /* stylelint-disable-line */
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
@@ -57,14 +95,14 @@
 .modal__button--error {
   width: 180px;
   padding: 18px 63px 14px 64px;
-  margin: 14px 70px 35px 70px;
+  margin: 0 auto;
 }
 
 @media (min-width: @tablet-width) {
   .modal__button--error {
     width: 272px;
     padding: 18px 107px 14px 107px;
-    margin: 30px 64px 49px 64px;
+    margin: 0 auto;
   }
 }
 
@@ -72,20 +110,23 @@
   .modal__button--error {
     width: 272px;
     padding: 18px 107px 14px 107px;
-    margin: 30px 64px 49px 64px;
+    margin: 0 auto;
   }
 }
 
 .modal__button--success {
   width: 280px;
   padding: 18px 61px 14px 61px;
+  margin: 0 auto;
+  font-size: 18px;
 }
 
 
 @media (min-width: @tablet-width) {
   .modal__button--success {
     width: 458px;
-    padding: 18px 139px 14px 140px;
+    padding: 18px 145px 14px 148px;
+    font-size: 21px;
   }
 }
 
@@ -94,19 +135,21 @@
   .modal__button--success {
     width: 458px;
     padding: 18px 139px 14px 140px;
+    font-size: 21px;
   }
 }
 
 .modal__title {
   .text-block__title();
-  margin-bottom: 37px;
+  margin-bottom: 25px;
 }
+
 
 @media (min-width: @tablet-width) {
   .modal__title--error {
     font-size: 30px;
     line-height: 40px;
-    margin-bottom: 35px;
+    margin-bottom: 20px;
     padding-left: 49px;
     padding-right: 49px;
   }
@@ -116,7 +159,7 @@
   .modal__title--error {
     font-size: 30px;
     line-height: 40px;
-    margin-bottom: 35px;
+    margin-bottom: 28px;
     padding-left: 49px;
     padding-right: 49px;
   }
@@ -126,7 +169,7 @@
 @media (min-width: @tablet-width) {
   .modal__title--success {
     font-size: 30px;
-    margin-bottom: 35px;
+    margin-bottom: 30px;
     padding-left: 50px;
     padding-right: 50px;
   }
@@ -135,7 +178,7 @@
 @media (min-width: @desktop-width) {
   .modal__title--success {
     font-size: 30px;
-    margin-bottom: 35px;
+    margin-bottom: 30px;
     padding-left: 50px;
     padding-right: 50px;
   }
@@ -146,37 +189,46 @@
 }
 
 .modal__text-wrapper--error {
-  box-sizing: border-box;
-  padding: 45px 41px 14px 42px;
+  margin-bottom: 28px;
 }
 
 @media (min-width: @tablet-width) {
   .modal__text-wrapper--error {
-    padding: 38px 46px 33px 47px;
+    margin-bottom: 48px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .modal__text-wrapper--error {
-    padding: 38px 46px 33px 47px;
+    margin-bottom: 46px;
   }
 }
 
 .modal__text-wrapper--success {
-  box-sizing: border-box;
-  padding: 39px 37px 58px 37px;
+  margin-bottom: 50px;
+  padding-left: 37px;
+  padding-right: 39px;
+
+  br {
+    display: block;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .modal__text-wrapper--success {
-    padding: 52px 97px 57px 99px;
+    padding: 0;
+    padding-right: 97px;
+    padding-left: 99px;
   }
 }
 
 
 @media (min-width: @desktop-width) {
   .modal__text-wrapper--success {
-    padding: 52px 97px 57px 99px;
+    padding: 0;
+    padding-right: 97px;
+    padding-left: 99px;
+    margin-bottom: 52px;
   }
 }
 
@@ -184,12 +236,21 @@
   box-sizing: border-box;
   padding: 20px;
   background-color: @grey-input;
+  margin: 0 auto;
 }
 
 @media (min-width: @tablet-width) {
   .modal__button-wrapper {
     box-sizing: border-box;
-    padding: 44px 91px;
+    padding: 43px 91px;
+    background-color: @grey-input;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .modal__button-wrapper {
+    box-sizing: border-box;
+    padding: 43px 91px;
     background-color: @grey-input;
   }
 }
