--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -1,6 +1,6 @@
 .welcome {
   width: 320px;
-  height: 389px;
+  height: 388px;
   background-image: url("../img/welcome-mobile.jpg");
   background-color: darken(@blue, 30%);
   background-size: 100% 100%;
@@ -10,9 +10,9 @@
 
 @media (min-resolution: 2dppx) {
   .welcome {
-  background-image: url("../img/welcome-mobile@2x.jpg");
-  background-size: 320px auto;
-}
+    background-image: url("../img/welcome-mobile@2x.jpg");
+    background-size: 320px auto;
+  }
 }
 
 
@@ -62,13 +62,14 @@
     bottom: 0;
     content: url("../img/triangle-desktop.svg");
     padding: 0;
-    margin-bottom: -6px;
+    margin-bottom: -5px;
+    /*7 модуль*/
   }
 }
 
 .welcome--catalog {
   width: 320px;
-  height: 160px;
+  height: 159px;
   background-image: url("../img/catalog/back-catalog-mobile.jpg");
   background-color: darken(@blue, 30%);
   background-size: 100% 100%;
@@ -78,9 +79,9 @@
 
 @media (min-resolution: 2dppx) {
   .welcome--catalog {
-  background-image: url("../img/catalog/back-catalog-mobile@2x.jpg");
-  background-size: 320px auto;
-}
+    background-image: url("../img/catalog/back-catalog-mobile@2x.jpg");
+    background-size: 320px auto;
+  }
 }
 
 
@@ -96,11 +97,11 @@
     display: flex;
 
 
-  @media (min-resolution: 2dppx) {
-    background-image: url("../img/catalog/back-catalog-tablet@2x.jpg");
-    background-size: 768px auto;
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/catalog/back-catalog-tablet@2x.jpg");
+      background-size: 768px auto;
+    }
   }
-}
 }
 
 
@@ -115,11 +116,11 @@
     display: flex;
 
 
-  @media (min-resolution: 2dppx) {
-    background-image: url("../img/catalog/back-catalog-desktop@2x.jpg");
-    background-size: 1200px auto;
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/catalog/back-catalog-desktop@2x.jpg");
+      background-size: 1200px auto;
+    }
   }
-}
 }
 
 
