--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -24,7 +24,7 @@
 
 .advantages__item {
   background-color: @grey-advantages;
-  padding: 26px 18px 24px 18px;
+  padding: 26px 35px 23px 35px;
 }
 
 @media (max-width: @mobile-width-only) {
@@ -34,9 +34,9 @@
 
   .advantages__first-line::after {
     position: absolute;
-    right: 17px;
-    bottom: -24px;
-    left: 17px;
+    right: -15px;
+    bottom: -26px;
+    left: -15px;
     height: 1px;
     background-color: @line;
     content: "";
@@ -49,9 +49,9 @@
 
   .advantages__second-line::after {
     position: absolute;
-    right: 17px;
-    bottom: -24px;
-    left: 17px;
+    right: -15px;
+    bottom: -26px;
+    left: -15px;
     height: 1px;
     background-color: @line;
     content: "";
@@ -62,14 +62,14 @@
 @media (min-width: @tablet-width) {
   .advantages__item {
     background-color: @grey-advantages;
-    padding: 42px 33px 63px 34px;
+    padding: 40px 40px 42px 40px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .advantages__item {
     background-color: @grey-advantages;
-    padding: 43px 42px 62px 43px;
+    padding: 41px 42px 62px 43px;
   }
 }
 
@@ -91,6 +91,13 @@
   }
 }
 
+
+.advantages__text {
+  background-color: @blue;
+  padding: 47px 25px 40px 16px;
+}
+
+
 @media (min-width: @tablet-width) {
   .advantages__text {
     width: 256px;
@@ -103,10 +110,11 @@
   .advantages__text {
     width: 400px;
     box-sizing: border-box;
-    padding: 47px 53px 56px 52px;
+    padding: 48px 53px 56px 52px;
   }
 }
 
+/*7 задание конец - поменяла местами первый элемент и внесла изменения в паддинг*/
 .advantages__img {
   display: block;
   padding: 0;
@@ -129,7 +137,7 @@
 .advantages__item--icon {
   position: relative;
   box-sizing: border-box;
-  padding-left: 65px;
+  padding-left: 64px;
   padding-right: 30px;
   background-color: @white;
 }
@@ -145,14 +153,15 @@
 @media (min-width: @desktop-width) {
   .advantages__item--icon {
     margin: 0;
-    padding: 158px 58px 79px 46px;
   }
 }
 
 .advantages__item--house {
   background-image: url("../img/icons/house-mobile.svg");
   background-repeat: no-repeat;
-  background-position: 23px 18px;
+  background-position: 17px 22px;
+  padding-top: 30px;
+  padding-bottom: 11px;
 }
 
 
@@ -161,6 +170,7 @@
     background-image: url("../img/icons/house-desktop.svg");
     background-repeat: no-repeat;
     background-position: 90px 60px;
+    padding: 159px 38px 59px 38px;
   }
 }
 
@@ -170,20 +180,29 @@
     background-image: url("../img/icons/house-desktop.svg");
     background-repeat: no-repeat;
     background-position: 161px 59px;
+    padding: 158px 48px 79px 46px;
   }
 }
 
 .advantages__item--food {
   background-image: url("../img/icons/food-mobile.svg");
   background-repeat: no-repeat;
-  background-position: 23px 18px;
+  background-position: 17px 10px;
+  padding-top: 18px;
+  padding-left: 68px;
+  padding-right: 20px;
+
+  br {
+    display: none;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .advantages__item--food {
     background-image: url("../img/icons/burger-desktop.svg");
     background-repeat: no-repeat;
-    background-position: 90px 60px;
+    background-position: 90px 62px;
+    padding: 157px 36px 59px 36px;
   }
 }
 
@@ -191,21 +210,34 @@
   .advantages__item--food {
     background-image: url("../img/icons/burger-desktop.svg");
     background-repeat: no-repeat;
-    background-position: 161px 59px;
+    background-position: 161px 63px;
+    padding: 158px 43px 79px 44px;
+
+    br {
+      display: block;
+    }
   }
 }
 
 .advantages__item--souvenir {
   background-image: url("../img/icons/souvenir-mobile.svg");
   background-repeat: no-repeat;
-  background-position: 23px 18px;
+  background-position: 16px -3px;
+  padding-top: 5px;
+  padding-left: 61px;
+  padding-bottom: 50px;
+
+  br {
+    display: none;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .advantages__item--souvenir {
     background-image: url("../img/icons/souvenir-desktop.svg");
     background-repeat: no-repeat;
-    background-position: 90px 60px;
+    background-position: 93px 58px;
+    padding: 158px 30px 59px 30px;
   }
 }
 
@@ -213,39 +245,96 @@
   .advantages__item--souvenir {
     background-image: url("../img/icons/souvenir-desktop.svg");
     background-repeat: no-repeat;
-    background-position: 161px 59px;
-  }
-}
+    background-position: 167px 58px;
+    padding: 158px 43px 79px 46px;
 
-.advantages__text {
-  background-color: @blue;
-  padding: 39px 15px 35px 16px;
+    br {
+      display: block;
+    }
+  }
 }
 
 .advantages__title {
   .text-block__title();
-  margin-bottom: 22px;
+  margin-bottom: 11px;
+
+  br {
+    display: none;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .advantages__title {
+    font-size: 21px;
+    margin-bottom: 14px;
+
+    br {
+      display: block;
+    }
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantages__title {
+    font-size: 21px;
+    margin-bottom: 12px;
+
+    br {
+      display: block;
+    }
+  }
 }
 
 .advantages__title--white-theme {
   color: @white;
+  margin-bottom: 12px;
+
+  br {
+    display: none;
+  }
 }
+
+@media (min-width: @tablet-width) {
+  .advantages__title--white-theme {
+    font-size: 21px;
+    margin-bottom: 14px;
+
+    br {
+      display: block;
+    }
+  }
+}
+
+
+@media (min-width: @desktop-width) {
+  .advantages__title--white-theme {
+    font-size: 21px;
+    margin-bottom: 13px;
+
+    br {
+      display: block;
+    }
+  }
+}
+
 
 .advantages__title--icon {
   text-align: left;
-  margin-bottom: 28px;
+  margin-bottom: 17px;
 }
 
 @media (min-width: @tablet-width) {
   .advantages__title--icon {
-    margin-bottom: 32px;
+    font-size: 21px;
+    margin-bottom: 23px;
     text-align: center;
   }
 }
 
 @media (min-width: @desktop-width) {
   .advantages__title--icon {
-    margin-bottom: 28px;
+    font-size: 21px;
+    margin-bottom: 24px;
     text-align: center;
   }
 }
@@ -253,17 +342,29 @@
 .advantages__description {
   .text-block__description();
   margin-bottom: 17px;
+
+  br {
+    display: none;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .advantages__description {
     margin-bottom: 22px;
+
+    br {
+      display: block;
+    }
   }
 }
 
 @media (min-width: @desktop-width) {
   .advantages__description {
-    margin-bottom: 32px;
+    margin-bottom: 24px;
+
+    br {
+      display: block;
+    }
   }
 }
 
@@ -273,6 +374,18 @@
 
 .advantages__description--white-theme {
   color: @white;
+
+  br {
+    display: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantages__description--white-theme {
+    br {
+      display: block;
+    }
+  }
 }
 
 .advantages__description--icon {
@@ -294,7 +407,35 @@
 }
 
 @media (min-width: @tablet-width) {
+  .advantages__description--souvenir {
+    br {
+      display: none;
+    }
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantages__description--souvenir {
+    br {
+      display: block;
+    }
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .advantages__description--road {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+.advantages__text--bridge {
+  padding: 41px 33px 35px 29px;
+}
+
+@media (min-width: @tablet-width) {
   .advantages__text--bridge {
+    padding: 41px 44px 44px 44px;
     order: 2;
   }
 }
@@ -302,5 +443,10 @@
 @media (min-width: @desktop-width) {
   .advantages__text--bridge {
     order: 2;
+    padding: 50px 53px 56px 52px;
+
+    br {
+      display: block;
+    }
   }
 }
