--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -11,7 +11,6 @@
     padding: 0;
     padding-left: 60px;
     padding-right: 60px;
-    padding-bottom: 48px;
     display: grid;
     grid-template-columns: repeat(2, 324px);
     width: 768px;
@@ -25,7 +24,7 @@
     padding: 0;
     padding-left: 120px;
     padding-right: 120px;
-    padding-bottom: 64px;
+
     display: grid;
     grid-template-columns: repeat(2, 480px);
     width: 1200px;
@@ -53,20 +52,31 @@
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-}
-
-.feedback__wrapper {
-  width: 320px;
-  box-sizing: border-box;
-  padding: 24px 20px 39px 20px;
-  margin: 0;
+  width: 280px;
 }
 
 @media (max-width: @mobile-width-only) {
   .feedback__wrapper {
-    border-bottom: solid 1px @grey-button-hover;
+    width: 320px;
+    box-sizing: border-box;
+    padding: 24px 20px 39px 20px;
+    margin: 0;
   }
 }
+
+
+.feedback__wrapper--left {
+  padding-top: 8px;
+  margin-bottom: 2px;
+}
+
+@media (min-width: @tablet-width) {
+  .feedback__wrapper--left {
+    padding-top: 3px;
+    padding-left: 0;
+  }
+}
+
 
 @media (min-width: @tablet-width) {
   .feedback__field {
@@ -92,16 +102,23 @@
   }
 }
 
+@media (min-width: @desktop-width) {
+  .feedback__field--left {
+    padding-left: 13px;
+  }
+}
+
 @media (min-width: @tablet-width) {
   .feedback__wrapper--right {
     position: relative;
     width: 324px;
+    padding: 4px 0 66px 0;
   }
 
   .feedback__wrapper--right::after {
     position: absolute;
-    top: 20px;
-    right: -20px;
+    top: 5px;
+    right: 0;
     height: 338px;
     width: 1px;
     background-color: @form-border;
@@ -114,12 +131,13 @@
   .feedback__wrapper--right {
     position: relative;
     width: 480px;
+    padding-bottom: 75px;
   }
 
   .feedback__wrapper--right::after {
     position: absolute;
-    top: 20px;
-    right: -25px;
+    top: 3px;
+    right: -15px;
     height: 338px;
     width: 1px;
     background-color: @form-border;
@@ -128,63 +146,21 @@
   }
 }
 
+.feedback__field--choose {
+  margin-top: -20px;
+  margin-bottom: -11px;
+}
 
 @media (min-width: @tablet-width) {
   .feedback__field--choose {
-    position: relative;
-  }
-
-  .feedback__field--choose::after {
-    position: absolute;
-    right: 0;
-    top: -43px;
-    height: 1px;
-    width: 123px;
-    background-color: @form-border;
-    content: "";
-    z-index: 2;
-  }
-
-  .feedback__field--choose::before {
-    position: absolute;
-    left: 0;
-    top: -43px;
-    height: 1px;
-    width: 123px;
-    background-color: @form-border;
-    content: "";
-    z-index: 2;
+    justify-content: space-between;
+    grid-column: 1/-1;
+    justify-self: stretch;
+    width: 648px;
+    box-sizing: border-box;
   }
 }
 
-
-@media (min-width: @desktop-width) {
-  .feedback__field--choose {
-    position: relative;
-  }
-
-  .feedback__field--choose::after {
-    position: absolute;
-    right: 0;
-    top: -43px;
-    height: 1px;
-    width: 280px;
-    background-color: @form-border;
-    content: "";
-    z-index: 2;
-  }
-
-  .feedback__field--choose::before {
-    position: absolute;
-    left: 0;
-    top: -43px;
-    height: 1px;
-    width: 280px;
-    background-color: @form-border;
-    content: "";
-    z-index: 2;
-  }
-}
 
 .feedback__button {
   width: 58px;
@@ -218,17 +194,17 @@
   .feedback__list--opinion {
     display: grid;
     grid-template-columns: repeat(2, 280px);
-    grid-gap: 16px;
-    padding-left: 36px;
-    padding-right: 36px;
+    grid-column-gap: 16px;
+    padding: 0 35px 61px 35px;
+    margin: 0;
   }
 
   .feedback__list--sites {
     display: grid;
     grid-template-columns: repeat(2, 224px);
     grid-column-gap: 32px;
-    padding-left: 84px;
-    padding-right: 84px;
+    padding: 0 85px 39px 85px;
+    margin: 0;
   }
 }
 
@@ -237,16 +213,14 @@
     display: grid;
     grid-template-columns: repeat(3, 280px);
     grid-gap: 28px;
-    padding-left: 53px;
-    padding-right: 53px;
+    padding: 0 53px 88px 53px;
   }
 
   .feedback__list--sites {
     display: grid;
-    grid-template-columns: repeat(4, 172px);
+    grid-template-columns: 172px 170px 153px 184px;
     grid-column-gap: 64px;
-    padding-left: 44px;
-    padding-right: 44px;
+    padding: 0 44px 82px 44px;
   }
 }
 
@@ -256,6 +230,7 @@
 
 .feedback__form-label {
   .text-block__description();
+  text-indent: 17px;
 }
 
 @media (min-width: @tablet-width) {
@@ -276,12 +251,32 @@
   margin-bottom: 20px;
   margin-top: 24px;
   display: block;
+  padding-right: 10px;
+}
+
+
+@media (max-width: @mobile-width-only) {
+  .feedback__title {
+    width: 280px;
+    position: relative;
+  }
+
+  .feedback__title::after {
+    position: absolute;
+    left: -20px;
+    top: -25px;
+    width: 320px;
+    height: 1px;
+    background-color: @grey-button-hover;
+    content: "";
+  }
 }
 
 @media (min-width: @tablet-width) {
   .feedback__title {
     font-size: 21px;
-    margin-bottom: 28px;
+    margin-bottom: 29px;
+    text-indent: 12px;
   }
 }
 
@@ -290,6 +285,134 @@
   .feedback__title {
     font-size: 21px;
     margin-bottom: 28px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .feedback__title--line {
+    width: 648px;
+    grid: 1/-1;
+    box-sizing: border-box;
+    position: relative;
+  }
+
+  .feedback__title--line::after {
+    position: absolute;
+    right: 0;
+    top: 12px;
+    height: 1px;
+    width: 123px;
+    background-color: @form-border;
+    content: "";
+    z-index: 2;
+  }
+
+  .feedback__title--line::before {
+    position: absolute;
+    left: 0;
+    top: 12px;
+    height: 1px;
+    width: 123px;
+    background-color: @form-border;
+    content: "";
+    z-index: 2;
+  }
+}
+
+
+@media (min-width: @desktop-width) {
+  .feedback__title--line {
+    width: 648px;
+    box-sizing: border-box;
+    position: relative;
+    text-indent: -32px;
+    margin-bottom: 45px;
+  }
+
+  .feedback__title--line::after {
+    position: absolute;
+    right: -131px;
+    top: 12px;
+    height: 1px;
+    width: 280px;
+    background-color: @form-border;
+    content: "";
+    z-index: 2;
+  }
+
+  .feedback__title--line::before {
+    position: absolute;
+    left: -179px;
+    top: 12px;
+    height: 1px;
+    width: 280px;
+    background-color: @form-border;
+    content: "";
+    z-index: 2;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .feedback__title--sites {
+    width: 648px;
+    grid: 1/-1;
+    box-sizing: border-box;
+    position: relative;
+  }
+
+  .feedback__title--sites::after {
+    position: absolute;
+    right: 0;
+    top: 25px;
+    height: 1px;
+    width: 123px;
+    background-color: @form-border;
+    content: "";
+    z-index: 2;
+  }
+
+  .feedback__title--sites::before {
+    position: absolute;
+    left: 0;
+    top: 25px;
+    height: 1px;
+    width: 123px;
+    background-color: @form-border;
+    content: "";
+    z-index: 2;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .feedback__title--sites {
+    grid: 1/-1;
+    box-sizing: border-box;
+    position: relative;
+    text-indent: 2px;
+    padding-left: 7px;
+    margin-bottom: 60px;
+  }
+
+  .feedback__title--sites::after {
+    position: absolute;
+    right: -158px;
+    top: 25px;
+    height: 1px;
+    width: 280px;
+    background-color: @form-border;
+    content: "";
+    z-index: 2;
+  }
+
+  .feedback__title--sites::before {
+    position: absolute;
+    left: -158px;
+    top: 25px;
+    height: 1px;
+    width: 280px;
+    background-color: @form-border;
+    content: "";
+    z-index: 2;
   }
 }
 
@@ -307,17 +430,52 @@
 
 @media (min-width: @tablet-width) {
   .feedback__text {
-    padding-top: 23px;
-    padding-left: 182px;
+    font-size: 14px;
+    padding: 0;
+    padding-top: 5px;
+    align-self: center;
   }
 }
 
 @media (min-width: @desktop-width) {
   .feedback__text {
-    padding-top: 23px;
-    padding-left: 247px;
+    padding-top: 7px;
+    padding-left: 24px;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .feedback__title--textarea {
+    text-indent: 4px;
+    width: 648px;
+    margin-bottom: 27px;
+    padding: 0;
+    position: relative;
+  }
+
+  .feedback__title--textarea::after {
+    position: absolute;
+    right: -158px;
+    top: 14px;
+    height: 1px;
+    width: 280px;
+    background-color: @form-border;
+    content: "";
+    z-index: 2;
+  }
+
+  .feedback__title--textarea::before {
+    position: absolute;
+    left: -158px;
+    top: 14px;
+    height: 1px;
+    width: 280px;
+    background-color: @form-border;
+    content: "";
+    z-index: 2;
+  }
+}
+
 
 .feedback__input {
   box-sizing: border-box;
@@ -327,6 +485,7 @@
   background-color: @grey-input;
   border: none;
   padding: 16px;
+  padding-top: 21px;
 }
 
 @media (min-width: @desktop-width) {
@@ -395,21 +554,24 @@
   opacity: 0.3;
 }
 
+.feedback__field--textarea {
+  margin-bottom: -13px;
+}
 
 @media (min-width: @tablet-width) {
   .feedback__field--textarea {
     box-sizing: border-box;
     padding: 0;
+    margin: 0;
     width: 648px;
+    margin-bottom: 72px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .feedback__field--textarea {
     box-sizing: border-box;
-    padding-left: 96px;
-    padding-right: 96px;
-    width: 768px;
+    margin-bottom: 62px;
   }
 }
 
@@ -419,9 +581,9 @@
   width: 279px;
   min-height: 150px;
   background-color: @grey-input;
-  padding: 16px;
+  padding: 17px;
   box-sizing: border-box;
-  margin-bottom: 56px;
+  margin-bottom: 58px;
   color: rgba(0, 0, 0, 0.3);
   text-align: left;
   text-transform: none;
@@ -430,8 +592,9 @@
 @media (min-width: @tablet-width) {
   .feedback__textarea {
     width: 648px;
-    min-height: 150px;
-    margin-bottom: 48px;
+    min-height: 160px;
+    margin-bottom: 46px;
+    padding: 15px;
   }
 }
 
@@ -439,20 +602,23 @@
   .feedback__textarea {
     width: 768px;
     min-height: 160px;
+    margin-bottom: 50px;
+    margin-left: 96px;
+    margin-right: 96px;
   }
 }
 
 .feedback__button--blue {
   width: 281px;
-  padding: 18px 33px 14px 33px;
-  margin-bottom: 0;
+  padding: 16px 36px 14px 33px;
+  margin-bottom: 3px;
 }
 
 
 @media (min-width: @tablet-width) {
   .feedback__button--blue {
     width: 324px;
-    padding: 18px 49px 14px 49px;
+    padding: 18px 54px 14px 49px;
     margin-bottom: 0;
   }
 }
@@ -460,15 +626,30 @@
 @media (min-width: @desktop-width) {
   .feedback__button--blue {
     width: 384px;
-    padding: 18px 58px 14px 58px;
+    padding: 18px 68px 14px 58px;
     margin-bottom: 0;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .feedback__button-wrapper {
+    width: 648px;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .feedback__button-wrapper {
+    width: 768px;
+    margin-left: 96px;
   }
 }
 
 .feedback__control {
   position: relative;
   display: block;
-  padding-left: 39px;
+  padding-left: 29px;
   margin-bottom: 16px;
 }
 
@@ -517,8 +698,8 @@
 
 .feedback__choice[type="checkbox"]:checked + .feedback__mark::after {
   position: absolute;
-  top: 15px;
-  left: 12px;
+  top: 14px;
+  left: 11px;
   width: 22px;
   height: 16px;
   background-image: url("../img/icons/tick.svg");
@@ -527,7 +708,7 @@
 
 .feedback__choice[type="radio"]:checked + .feedback__mark--circle::before {
   position: absolute;
-  top: 15px;
+  top: 13px;
   left: 15px;
   width: 16px;
   height: 16px;
