--- a/source/less/blocks/find-hotel.less
+++ b/source/less/blocks/find-hotel.less
@@ -1,7 +1,7 @@
 .find-hotel {
   width: 320px;
   box-sizing: border-box;
-  padding: 38px 18px 49px 18px;
+  padding: 45px 16px 49px 18px;
 }
 
 @media (min-width: @tablet-width) {
@@ -16,7 +16,7 @@
   .find-hotel {
     width: 1200px;
     box-sizing: border-box;
-    padding: 61px 371px 66px 371px;
+    padding: 59px 371px 66px 371px;
   }
 }
 
@@ -41,38 +41,51 @@
 
 .find-hotel__title {
   .text-block__title();
-  margin-bottom: 30px;
+  font-size: 21px;
+  margin-bottom: 19px;
 }
 
 @media (min-width: @tablet-width) {
   .find-hotel__title {
     .text-block__title();
-    margin-bottom: 37px;
+    font-size: 30px;
+    margin-bottom: 32px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .find-hotel__title {
-    .text-block__title();
-    margin-bottom: 39px;
+    font-size: 30px;
+    margin-bottom: 32px;
   }
 }
 
 .find-hotel__description {
   .text-block__description();
-  margin-bottom: 34px;
+  margin-bottom: 32px;
+
+  br {
+    display: none;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .find-hotel__description {
     .text-block__description();
     margin-bottom: 40px;
+
+    br {
+      display: block;
+    }
   }
 }
 
 @media (min-width: @desktop-width) {
   .find-hotel__description {
-    .text-block__description();
     margin-bottom: 46px;
+
+    br {
+      display: block;
+    }
   }
 }
