--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -3,6 +3,7 @@
   display: block;
   width: 320px;
   height: 350px;
+  margin-bottom: 11px;
 }
 
 @media (min-width: @tablet-width) {
@@ -14,5 +15,6 @@
 @media (min-width: @desktop-width) {
   .map__img {
     width: 1200px;
+    margin-bottom: 1px;
   }
 }
