--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -13,7 +13,20 @@
   .site-list {
     z-index: 2;
   }
+
+  .site-list::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 320px;
+    height: 7px;
+    box-shadow: inset 0 -4px 4px 0 fade(@black, 25%);
+  }
+
+  /*Седьмое задание конец*/
 }
+
 
 @media (min-width: @tablet-width) {
   .site-list {
@@ -105,7 +118,13 @@
     .text-block__description();
     font-weight: 700;
     width: 240px;
+    text-align: center;
   }
+
+  .site-list__item:nth-child(2) {
+    margin-right: 240px;
+  }
+
 
   .site-list__link--current {
     color: @marron-link;
