--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,9 +1,27 @@
 .social__list {
   list-style-type: none;
-  margin: 34px 0 40px 0;
+  margin: 34px -5px 40px 0;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
+}
+
+@media (min-width: @tablet-width) {
+  .social__list {
+    margin: 0;
+    margin-left: -5px;
+    min-width: 156px;
+  }
+}
+
+
+@media (min-width: @desktop-width) {
+  .social__list {
+    margin: 0;
+    margin-left: -5px;
+    padding: 0;
+    min-width: 156px;
+  }
 }
 
 .social__button {
@@ -41,6 +59,6 @@
   margin-right: 6px;
 }
 
-.social__button:nth-child(3) {
+.social__item:nth-child(3) {
   margin-right: 0;
 }
