--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -114,7 +114,7 @@
   }
 }
 
-/*7 задание конец - поменяла местами первый элемент и внесла изменения в паддинг*/
+
 .advantages__img {
   display: block;
   padding: 0;
@@ -157,7 +157,7 @@
 }
 
 .advantages__item--house {
-  background-image: url("../img/icons/house-mobile.svg");
+  background-image: url("../img/house-mobile.svg");
   background-repeat: no-repeat;
   background-position: 17px 22px;
   padding-top: 30px;
@@ -167,7 +167,7 @@
 
 @media (min-width: @tablet-width) {
   .advantages__item--house {
-    background-image: url("../img/icons/house-desktop.svg");
+    background-image: url("../img/house-desktop.svg");
     background-repeat: no-repeat;
     background-position: 90px 60px;
     padding: 159px 38px 59px 38px;
@@ -177,7 +177,7 @@
 
 @media (min-width: @desktop-width) {
   .advantages__item--house {
-    background-image: url("../img/icons/house-desktop.svg");
+    background-image: url("../img/house-desktop.svg");
     background-repeat: no-repeat;
     background-position: 161px 59px;
     padding: 158px 48px 79px 46px;
@@ -185,7 +185,7 @@
 }
 
 .advantages__item--food {
-  background-image: url("../img/icons/food-mobile.svg");
+  background-image: url("../img/food-mobile.svg");
   background-repeat: no-repeat;
   background-position: 17px 10px;
   padding-top: 18px;
@@ -199,7 +199,7 @@
 
 @media (min-width: @tablet-width) {
   .advantages__item--food {
-    background-image: url("../img/icons/burger-desktop.svg");
+    background-image: url("../img/burger-desktop.svg");
     background-repeat: no-repeat;
     background-position: 90px 62px;
     padding: 157px 36px 59px 36px;
@@ -208,7 +208,7 @@
 
 @media (min-width: @desktop-width) {
   .advantages__item--food {
-    background-image: url("../img/icons/burger-desktop.svg");
+    background-image: url("../img/burger-desktop.svg");
     background-repeat: no-repeat;
     background-position: 161px 63px;
     padding: 158px 43px 79px 44px;
@@ -220,7 +220,7 @@
 }
 
 .advantages__item--souvenir {
-  background-image: url("../img/icons/souvenir-mobile.svg");
+  background-image: url("../img/souvenir-mobile.svg");
   background-repeat: no-repeat;
   background-position: 16px -3px;
   padding-top: 5px;
@@ -234,7 +234,7 @@
 
 @media (min-width: @tablet-width) {
   .advantages__item--souvenir {
-    background-image: url("../img/icons/souvenir-desktop.svg");
+    background-image: url("../img/souvenir-desktop.svg");
     background-repeat: no-repeat;
     background-position: 93px 58px;
     padding: 158px 30px 59px 30px;
@@ -243,7 +243,7 @@
 
 @media (min-width: @desktop-width) {
   .advantages__item--souvenir {
-    background-image: url("../img/icons/souvenir-desktop.svg");
+    background-image: url("../img/souvenir-desktop.svg");
     background-repeat: no-repeat;
     background-position: 167px 58px;
     padding: 158px 43px 79px 46px;
