--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -173,13 +173,13 @@
 }
 
 .feedback__button--phone {
-  background-image: url("/img/icons/phone.svg");
+  background-image: url("/img/phone.svg");
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .feedback__button--email {
-  background-image: url("/img/icons/mail.svg");
+  background-image: url("/img/mail.svg");
   background-repeat: no-repeat;
   background-position: center;
 }
