--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -1,6 +1,6 @@
 .modal {
   position: relative;
-  -webkit-box-sizing: border-box;   /* stylelint-disable-line */
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin: auto;
   background-color: @white;
@@ -83,9 +83,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  display: -webkit-box;   /* stylelint-disable-line */
-  display: -ms-flexbox;   /* stylelint-disable-line */
-  display: flex;   /* stylelint-disable-line */
+  display: flex;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
