--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -1,6 +1,6 @@
 .modal {
   position: relative;
-  -webkit-box-sizing: border-box;
+  -webkit-box-sizing: border-box; /* stylelint-disable-line */
   box-sizing: border-box;
   margin: auto;
   background-color: @white;
