--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -50,7 +50,7 @@
   border: none;
   padding: 0;
   background-color: transparent;
-  background-image: url("../img/icons/polygon-mobile.svg");
+  background-image: url("../img/polygon-mobile.svg");
   background-repeat: no-repeat;
   position: absolute;
   top: 246px;
