Исправляет по комментариям доработки

--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -18,6 +18,8 @@
   top: 0;
   left: 50%;
   transform: translateX(-50%);
+  height: 96px;
+  width: 185px;
 }
 
 @media (min-width: @tablet-width) {
@@ -36,8 +38,10 @@
   }
 }
 
+/*
 .header__img {
   display: block;
   height: 96px;
   width: 185px;
 }
+*/
