--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -23,20 +23,20 @@
   }
 }
 
-.modal-content--error {
+.modal__content--error {
   padding: 45px 42px 35px 42px;
   display: flex;
   flex-direction: column;
 }
 
 @media (min-width: @tablet-width) {
-  .modal-content--error {
+  .modal__content--error {
     padding: 49px 47px 49px 46px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .modal-content--error {
+  .modal__content--error {
     padding: 44px 47px 47px 46px;
   }
 }
@@ -60,7 +60,7 @@
   }
 }
 
-.modal-content--success {
+.modal__content--success {
   padding: 0;
   padding-top: 40px;
   display: flex;
@@ -68,18 +68,18 @@
 }
 
 @media (min-width: @tablet-width) {
-  .modal-content--success {
+  .modal__content--success {
     padding-top: 52px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .modal-content--success {
+  .modal__content--success {
     padding-top: 52px;
   }
 }
 
-.modal__container {
+.modal--container {
   position: fixed;
   top: 0;
   left: 0;
