--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -67,20 +67,9 @@
     fill: rgba(129, 179, 210, 0.3);
   }
 
-  .nav--nojs .nav__toggle .nav__img--closed {
-    display: none;
-  }
-
-  .nav--nojs .nav__toggle {
-    display: block;
-    background-color: @blue;
-  }
-
+  .nav--nojs .nav__toggle .nav__img--closed,
   .nav--nojs .nav__toggle .nav__img--opened {
-    display: block;
-    fill: @white;
-    padding-left: 11px;
-    padding-right: 19px;
+    display: none;
   }
 
   .nav--nojs .nav__wrapper {
@@ -91,6 +80,12 @@
   .nav--nojs .site-list__item {
     display: block;
     z-index: 3;
+  }
+
+  .nav--nojs .site-list {
+    position: relative;
+    display: flex;
+    flex-direction: column;
   }
 
   .nav--opened .nav__toggle {
