--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -365,6 +365,7 @@
     grid: 1/-1;
     box-sizing: border-box;
     position: relative;
+    text-indent: 5px;
   }
 
   .feedback__title--sites::after {
@@ -568,7 +569,7 @@
     padding: 0;
     margin: 0;
     width: 648px;
-    margin-bottom: 72px;
+    margin-bottom: 69px;
   }
 }
 
