--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -9,8 +9,7 @@
 @media (min-width: @tablet-width) {
   .social__list {
     margin: 0;
-    margin-left: -5px;
-    min-width: 156px;
+    width: 165px;
   }
 }
 
@@ -18,9 +17,7 @@
 @media (min-width: @desktop-width) {
   .social__list {
     margin: 0;
-    margin-left: -5px;
-    padding: 0;
-    min-width: 156px;
+    width: 165px;
   }
 }
 
@@ -32,8 +29,8 @@
   padding: 12px;
 }
 
-.social__button:last-child {
-  margin-right: 0;
+.social__button--tg {
+  padding-bottom: 10px;
 }
 
 .social__button:hover {
@@ -47,8 +44,12 @@
 .social__img {
   fill: @white;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   align-content: center;
+}
+
+.social__img--tg {
+  margin-top: 2px;
 }
 
 .social__button:active .social__img {
@@ -57,6 +58,7 @@
 
 .social__item {
   margin-right: 6px;
+  margin-bottom: 6px;
 }
 
 .social__item:nth-child(3) {
