--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -22,9 +22,13 @@
 
 .video__container {
   width: 280px;
+  min-height: 177px;
   margin: 0;
   margin-top: 38px;
   padding: 0;
+  background-image: url("../img/catalog/video-mobile.jpg");
+  background-repeat: no-repeat;
+  background-size: 280px auto;
 }
 
 @media (min-width: @tablet-width) {
@@ -32,7 +36,9 @@
     width: 648px;
     min-height: 500px;
     margin-top: 90px;
-    object-fit: cover;
+    background-image: url("../img/catalog/video-tablet.jpg");
+    background-repeat: no-repeat;
+    background-size: 648px auto;
   }
 }
 
@@ -40,7 +46,11 @@
   .video__container {
     box-sizing: border-box;
     width: 800px;
+    min-height: 500px;
     margin-top: 83px;
+    background-image: url("../img/catalog/video-desktop.jpg");
+    background-repeat: no-repeat;
+    background-size: 800px auto;
   }
 }
 
