--- a/source/less/blocks/about-sedona.less
+++ b/source/less/blocks/about-sedona.less
@@ -56,7 +56,6 @@
     font-size: 21px;
     text-indent: -1px;
     margin-bottom: 30px;
-
     br {
       display: none;
     }
@@ -68,14 +67,12 @@
     font-size: 21px;
     text-indent: -1px;
     margin-bottom: 30px;
-
     br {
       display: none;
     }
   }
 }
 
-
-.text-block__description {
+.about-sedona__description {
   .text-block__description ();
 }
