--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -426,7 +426,7 @@
 }
 
 .feedback__text {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 12px;
   font-weight: 400;
   color: rgba(0, 0, 0, 0.6);
@@ -508,7 +508,7 @@
   background-color: @grey-button-hover;
 }
 
-.feedback__input:active {
+.feedback__input:focus {
   background-color: @white;
   outline: solid 4px @grey-button-hover;
 }
@@ -545,7 +545,7 @@
 }
 
 .feedback__input::placeholder {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 700;
   color: rgba(0, 0, 0, 0.3);
