--- a/source/less/blocks/hashtag.less
+++ b/source/less/blocks/hashtag.less
@@ -1,5 +1,5 @@
 .hashtag__description {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 21px;
   font-weight: 700;
   color: @black;
