--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -22,9 +22,17 @@
 
 @media (min-width: @desktop-width) {
   .page__container {
-    width: 1200px;
-    background-color: @white;
+    width: 1280px;
+    background-color: @grey-input;
     margin: 0 auto;
-    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
-  }
+   }
+}
+
+@media (min-width: @desktop-width) {
+.page__shadow {
+width: 1200px;
+background-color: @white;
+margin: 0 auto;
+box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
+}
 }
