--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,6 @@
-@import "./blocks/mixins.less";
-@import "./blocks/variables.less";
-@import "./blocks/fonts.less";
+@import "./mixins.less";
+@import "./variables.less";
+@import "./fonts.less";
 @import "./blocks/header.less";
 @import "./blocks/welcome.less";
 @import "./blocks/advantages.less";
