Устраняет недочеты по pixel perfect

--- a/source/less/blocks/html-academy.less
+++ b/source/less/blocks/html-academy.less
@@ -1,12 +1,17 @@
+.html-academy {
+  margin-top: -6px;
+}
+
 @media (min-width: @tablet-width) {
   .html-academy {
+    margin: 0;
     margin-right: 15px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .html-academy {
-    margin-right: 0;
+    margin: 0;
   }
 }
 
