--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -24,7 +24,6 @@
     padding: 0;
     padding-left: 120px;
     padding-right: 120px;
-
     display: grid;
     grid-template-columns: repeat(2, 480px);
     width: 1200px;
@@ -148,7 +147,6 @@
 
 .feedback__field--choose {
   margin-top: -20px;
-  margin-bottom: -11px;
 }
 
 @media (min-width: @tablet-width) {
@@ -158,9 +156,15 @@
     justify-self: stretch;
     width: 648px;
     box-sizing: border-box;
+    margin-bottom: 0;
   }
 }
 
+@media (min-width: @desktop-width) {
+  .feedback__field--choose {
+    margin-bottom: -2px;
+  }
+}
 
 .feedback__button {
   width: 58px;
@@ -190,11 +194,26 @@
   padding: 0;
 }
 
+.feedback__list--opinion {
+  display: grid;
+  grid-template-columns: 280px;
+  grid-row-gap: 10px;
+  margin: 0;
+}
+
+.feedback__list--sites {
+  display: grid;
+  grid-template-columns: 280px;
+  grid-row-gap: 10px;
+  margin: 0;
+}
+
 @media (min-width: @tablet-width) {
   .feedback__list--opinion {
     display: grid;
     grid-template-columns: repeat(2, 280px);
     grid-column-gap: 16px;
+    grid-row-gap: 10px;
     padding: 0 35px 61px 35px;
     margin: 0;
   }
@@ -203,8 +222,10 @@
     display: grid;
     grid-template-columns: repeat(2, 224px);
     grid-column-gap: 32px;
+    grid-row-gap: 10px;
     padding: 0 85px 39px 85px;
     margin: 0;
+    margin-bottom: -3px;
   }
 }
 
@@ -214,7 +235,7 @@
     grid-template-columns: repeat(3, 280px);
     grid-row: auto;
     grid-gap: 28px;
-    padding: 0 53px 88px 53px;
+    padding: 0 10px 88px 53px;
   }
 
   .feedback__list--sites {
@@ -222,6 +243,7 @@
     grid-template-columns: 172px 170px 153px 184px;
     grid-column-gap: 64px;
     padding: 0 44px 82px 44px;
+    margin: 0;
   }
 }
 
@@ -231,7 +253,6 @@
 
 .feedback__form-label {
   .text-block__description();
-  text-indent: 17px;
 }
 
 @media (min-width: @tablet-width) {
@@ -251,8 +272,14 @@
   .text-block__title;
   margin-bottom: 20px;
   margin-top: 24px;
-  display: block;
+  display: inline;
+  padding: 0;
   padding-right: 10px;
+  border: none;
+  padding-inline-start: 0;
+  padding-inline-end: 0;
+  appearance: none;
+  outline: 0;
 }
 
 
@@ -277,7 +304,6 @@
   .feedback__title {
     font-size: 21px;
     margin-bottom: 29px;
-    text-indent: 12px;
   }
 }
 
@@ -302,7 +328,6 @@
     grid: 1/-1;
     box-sizing: border-box;
     position: relative;
-    white-space: pre-wrap;
     padding-left: 127px;
     padding-right: 126px;
   }
@@ -339,7 +364,6 @@
     margin-bottom: 45px;
     padding-left: 280px;
     padding-right: 280px;
-
   }
 
   .feedback__title--line::after {
@@ -371,8 +395,6 @@
     grid: 1/-1;
     box-sizing: border-box;
     position: relative;
-    text-indent: 5px;
-    white-space: pre-wrap;
     padding-left: 127px;
     padding-right: 126px;
   }
@@ -407,7 +429,6 @@
     box-sizing: border-box;
     position: relative;
     text-indent: 2px;
-    padding-left: 7px;
     margin-bottom: 60px;
     padding-left: 280px;
     padding-right: 280px;
@@ -452,7 +473,7 @@
   .feedback__text {
     font-size: 14px;
     padding: 0;
-    padding-top: 5px;
+    padding-top: 7px;
     align-self: center;
   }
 }
@@ -466,9 +487,9 @@
 
 @media (min-width: @tablet-width) {
   .feedback__title--textarea {
-white-space: pre-wrap;
-padding-left: 127px;
-padding-right: 126px;
+    white-space: pre-wrap;
+    padding-left: 127px;
+    padding-right: 126px;
   }
 }
 
@@ -476,7 +497,7 @@ padding-right: 126px;
   .feedback__title--textarea {
     text-indent: 4px;
     width: 960px;
-    margin-bottom: 27px;
+    margin-bottom: 28px;
     padding: 0;
     position: relative;
     padding-left: 280px;
@@ -523,7 +544,6 @@ padding-right: 126px;
     width: 430px;
   }
 }
-
 
 .feedback__input:hover {
   background-color: @grey-button-hover;
@@ -590,7 +610,7 @@ padding-right: 126px;
     padding: 0;
     margin: 0;
     width: 648px;
-    margin-bottom: 69px;
+    margin-bottom: 72px;
   }
 }
 
@@ -607,7 +627,7 @@ padding-right: 126px;
   width: 279px;
   min-height: 150px;
   background-color: @grey-input;
-  padding: 17px;
+  padding: 18px;
   box-sizing: border-box;
   margin-bottom: 58px;
   color: rgba(0, 0, 0, 0.3);
@@ -631,10 +651,12 @@ padding-right: 126px;
     margin-bottom: 50px;
     margin-left: 96px;
     margin-right: 96px;
+    padding: 18px;
   }
 }
 
-.feedback__button--blue {
+.feedback__button-blue {
+  box-sizing: border-box;
   width: 281px;
   padding: 16px 36px 14px 33px;
   margin-bottom: 3px;
@@ -642,15 +664,15 @@ padding-right: 126px;
 
 
 @media (min-width: @tablet-width) {
-  .feedback__button--blue {
+  .feedback__button-blue {
     width: 324px;
-    padding: 18px 54px 14px 49px;
+    padding: 19px 56px 14px 49px;
     margin-bottom: 0;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .feedback__button--blue {
+  .feedback__button-blue {
     width: 384px;
     padding: 18px 68px 14px 58px;
     margin-bottom: 0;
@@ -752,9 +774,8 @@ padding-right: 126px;
   text-align: left;
   text-transform: none;
   padding-top: 10px;
-  padding-left: 16px;
+  padding-left: 32px;
 }
-
 
 
 .feedback__control-label:last-child {
